public/scss/themes.scss
/**  testnet theme  **/
body.theme-testnet {
  .top-nav,
  .navbar-fixed-bottom {
    background: #116466;
    color: #fff;
  }

  .top-search {
    color: #fff;
  }

  #menuToggle .patty {
    background: #fff;
  }

  .dcrdata-logo {
    background-image: url(/images/themes/night/logo.svg);
  }
}

/**  simnet theme  **/
body.theme-simnet {
  .top-nav,
  .navbar-fixed-bottom {
    background: #076191;
    color: #fff;
  }

  .top-search {
    color: #fff;
  }

  #menuToggle .patty {
    background: #fff;
  }
}

/* dark theme */
body.darkBG {
  background: #3b3f45;
  color: #fdfdfd;

  .grayed {
    color: rgba(253, 253, 253, 0.5);
  }

  a,
  a:hover {
    color: $dark-link-hover-color;
  }

  a.elidedhash,
  a.elidedhash:hover {
    color: transparent;
    text-decoration-color: $dark-link-hover-color;
  }

  a.elidedhash::before,
  a.elidedhash::after {
    color: $dark-link-hover-color;
  }

  div.elidedhash::before,
  div.elidedhash::after {
    color: #fdfdfd;
  }

  a.grayed,
  a.grayed:hover {
    color: rgba(148, 255, 202, 0.75) !important;
  }

  table thead th {
    vertical-align: bottom;
  }

  table thead tr {
    background: #2d2d2d;
  }

  table tr.disabled-row {
    background-color: #ff00000d;
  }

  table.table {
    tr,
    th,
    td {
      color: #fdfdfd; // Set this explicitly to prevent bootstrap > 4.3.1 override
      border-bottom: 1px solid #2d2d2d;
    }
  }

  .top-nav,
  .navbar-fixed-bottom {
    background: #292929;
  }

  .top-nav a,
  .navbar-fixed-bottom a {
    color: #fff;
  }

  .page-link {
    background-color: rgba(255, 255, 255, 0.18);
    border: 1px solid rgba(221, 221, 221, 0);
  }

  .page-item.disabled .page-link {
    border-color: transparent;
    background-color: #565656;
  }

  .json-block {
    color: #fdfdfd;
  }

  .top-search {
    color: #7fbdff;
  }

  .top-nav input:-webkit-autofill {
    -webkit-animation-name: autofillDark;
    -webkit-animation-fill-mode: both;
  }

  #menuToggle .patty {
    background: #fdfdfd;
  }

  #menuToggle input:checked ~ .patty {
    background: #fbfbfb;
  }

  #menu .menu-item {
    color: #fbfbfb;

    &:hover,
    &:hover span {
      color: $dark-link-hover-color;
    }
  }

  #menu {
    background: #2a2a2a;
    box-shadow: 0 0 0 1px #fff3;
  }

  .progress {
    background-color: #757575;
  }

  select,
  input[type=number] {
    color: #fff !important;
    background: #2a2a2a !important;
    border-color: #191919 !important;
  }

  .nav-pills .nav-link.active {
    background-color: #2dd8a3;
    color: black;
  }

  .dcrdata-logo {
    background-image: url(/images/themes/night/logo.svg);
  }

  //bootstrap dark theme
  .bg-white {
    background-color: $inverse-bg-white !important;
  }

  .text-secondary {
    color: #c1c1c1 !important;
  }

  .text-black-50 {
    color: rgba(255, 255, 255, 0.5) !important;
  }

  .text-green {
    color: #2eefa1;
  }

  .text-abandoned {
    color: #c4cbd2;
  }
}

